Scale SEO icon 3x to fill box (temp fix until image is properly cropped)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,8 +156,8 @@ li,
   min-width: 44px;
 }
 
-.service-card .icon.icon-large {
-  transform: scale(1.8);
+.service-card .icon.seo-icon-fill {
+  transform: scale(3);
 }
 
 
